...
                            // Start recording...
                            println("has all permissions")
                        } else {
                            permissionLauncher.launch(android.Manifest.permission.RECORD_AUDIO)
                        }
                    }) {
                        Text(text = "Record")
                    }
                    if(showPermissionError) {
                        Dialog(onDismissRequest = {
                            showPermissionError = false
                        }) {
                            Text(
                                text = "Can't record without permission",
                                modifier = Modifier
                                    .background(Color.White, RoundedCornerShape(100))
                                    .padding(16.dp)
                            )
                        }
                    }
...
